Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>I'm married and a father of twin girls. I'm a huge nerd. I'm am making the jump from distillation to programing, to create a better life for myself and my family. </p>
